# StreetSource

./: .gitignore  deploy_ec2.py  package-lock.json  readme.md
backend/: .env.example  Cargo.toml
backend/.cargo/: config.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: auth.rs  errors.rs  main.rs  models.rs  utils.rs  ws.rs
backend/src/handlers/: auth_handlers.rs  cart_handlers.rs  categories_handlers.rs  health_handler.rs  message_handlers.rs  order_handlers.rs  product_handlers.rs  upload_handlers.rs  user_handlers.rs
backend/testing/: endpoint_tests.py
frontend/: package-lock.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/auth/: AuthModal.tsx
frontend/src/components/cart/: CartPage.tsx
frontend/src/components/common/: Navigation.tsx  ProductCard.tsx
frontend/src/components/home/: HomePage.tsx
frontend/src/components/messages/: MessagesPage.tsx
frontend/src/components/orders/: OrdersPage.tsx
frontend/src/components/products/: ProductsPage.tsx
frontend/src/components/profile/: ProfilePage.tsx  SettingsPage.tsx
frontend/src/components/seller/: AddProductPage.tsx  MyProductsPage.tsx  SellerDashboard.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useAuth.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
