[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-ws = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "bigdecimal"] }
dotenv = "0.15"
aws-config = "1.8.3"
aws-sdk-s3 = "1.99.0"
nanoid = "0.4"
argon2 = "0.5.3"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.2"
base64 = "0.22.1"
env_logger = "0.11.8"
log = "0.4"
futures-util = "0.3"
bytes = "1.8"
actix-multipart = "0.7"
image = "0.25.6"
regex = "1.11.1"
lazy_static = "1.5.0"
bigdecimal = { version = "0.4", features = ["serde"] }

[build-dependencies]
sqlx-cli = { version = "0.8.6", features = ["postgres"] }
